[package]
name = "AOD_Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
log = "0.4"
hex = "0.4"
env_logger = "0.10"
hex-literal = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio-stream = "0.1"
chrono = "0.4"